cambio de color nav-bar e icons

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/arafkarim/BootstrapPlusPlus/2d8d0b9d/bpp/bpp.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark pink darken-4 mt-2">
+  <nav class="navbar navbar-expand-lg navbar-dark mt-2">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar5">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar5">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#"><i class="fa fa-home"></i> Home</a>
+          <a class="nav-link grey-text lighten-1" href="#"><i class="fa fa-home"></i> Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fa fa-envelope"></i> Message</a>
+          <a class="nav-link grey-text lighten-1" href="#"><i class="fa fa-bell-o" aria-hidden="true"></i> Notificaciones</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fa fa-file"></i> About</a>
+          <a class="nav-link grey-text lighten-1" href="#"><i class="fa fa-envelope"></i> Mensajes</a>
         </li>
       </ul>
       <a class="nav-link" href="#"><i class="fa fa-twitter"></i></a>
